objects/Flat_Rate_Type__c/Flat_Rate_Type__c.object-meta.xml
<CustomObject>
    <label>Flat Rate Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flat Rate Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>