objects/Flat_Rate_Type__c/fields/ADP_Code__c.field-meta.xml
<CustomField>
    <fullName>ADP_Code__c</fullName>
    <label>ADP Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BP</fullName>
                <label>Boom Pay</label>
            </value>
            <value>
                <fullName>PDL</fullName>
                <label>Per Diem Layover</label>
            </value>
            <value>
                <fullName>SPA</fullName>
                <label>Spill Pay</label>
            </value>
            <value>
                <fullName>STB</fullName>
                <label>Stand By</label>
            </value>
            <value>
                <fullName>TRP</fullName>
                <label>Truck Pay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>