objects/Flat_Rate_Type__c/fields/Misc_Charge_Resource__c.field-meta.xml
<CustomField>
    <fullName>Misc_Charge_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Misc. Charge Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Resource__c.Category__c</field>
            <operation>equals</operation>
            <value>Misc. Charges And Taxes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Flat Rate Type</relationshipLabel>
    <relationshipName>Flat_Pay_Type</relationshipName>
    <type>Lookup</type>
</CustomField>