objects/Flat_Rate_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ADP_Code__c</columns>
    <columns>Rate__c</columns>
    <columns>Misc_Charge_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>